--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon index.js",
+    "test": "mocha --timeout 10000"
+  },
   "dependencies": {
     "body-parser": "^1.17.2",
     "errorhandler": "^1.5.0",
     "express": "^4.15.4",
     "method-override": "^2.3.9",
-    "morgan": "^1.8.2",
     "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "chai": "^4.1.1",
+    "chai-http": "^3.0.0",
+    "mocha": "^3.5.0",
+    "nodemon": "^1.11.0"
   }
 }
